--- a/index.html
+++ b/index.html
@@ -22,18 +22,21 @@
 						<h1>Gomathi Sampath <br>
 							<span style="font-size: 0.75em;">Data Analyst</span><br /></h1>
 						<p>Data Analyst proficient in SQL, Python, Tableau, and Power BI, turning data into actionable insights <a href="https://github.com/gomathis1986">@Gomathi</li>
+						<a href="https://html5up.net/license"></a></p>
+							<ul class="actions">
+								<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
 					</div>
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Gomathi Sampath</a>
+						<a href="index.html" class="logo">PORTFOLIO</a>
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">PORTFOLIO</a></li>
+							<li class="active"><a href="index.html">PROJECTS</a></li>
 							
 						</ul>
 						<ul class="icons">
