--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 										<h2><a href="https://public.tableau.com/app/profile/gomathi.sampath1624/viz/Sepsis_Final_Presentation_StoryBoard/SEPSISSTORYBOARD"  target="_blank">SEPSIS ANALYSIS WITH TABLEAU STORYBOARD<br />
 										</a></h2>
 									</header>
-									<a href="https://public.tableau.com/app/profile/gomathi.sampath1624/viz/Sepsis_Final_Presentation_StoryBoard/SEPSISSTORYBOARD"  target="_blank" class="image fit"><img src="images/Sepsis.jpg" alt="" /></a>
+									<a href="https://public.tableau.com/app/profile/gomathi.sampath1624/viz/Sepsis_Final_Presentation_StoryBoard/SEPSISSTORYBOARD"  target="_blank" class="image fit"><img src="images/Sepsis1.png" alt="" /></a>
 									<p>Created a Tableau storyboard for ICU sepsis patients, utilizing calculated fields, Level of Detail (include, exclude, fixed), filters, parameters, and sets to deliver comprehensive insights.</p>
 									<ul class="actions special">
 										<li><a href="https://public.tableau.com/app/profile/gomathi.sampath1624/viz/Sepsis_Final_Presentation_StoryBoard/SEPSISSTORYBOARD"  target="_blank" class="button">View Project</a></li>
